# singledon

./: Cargo.toml  README.md
src/: async.rs  lib.rs  sync.rs
src/async/: futures.rs  mod.rs
