[package]
name = "singledon"
version = "0.1.0"
authors = ["Armand-Cezar Mathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "singledon-derive"]

[dependencies]

[dependencies.singledon_derive]
path     = "singledon-derive"
# Uncomment this once the crate is published.
# version  = "0.1.0"
optional = true

[features]
default = ["derive", "sync"]

# Asynchronous singletons.
async = []

# Synchronous singletons.
sync = []

# #[derive(Singleton)] and #[singleton_fn]
derive = ["singledon_derive"]
